# alloy

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon  justfile  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aarch64.yml  build.yml  checks.yml  release.yml  test.yml  x86-64.yml
crates/allot_asm/: Cargo.toml  README.md
crates/allot_asm/programs/: fib.ala  fib.allot  name.ala  name.allot  read.ala  read.allot  threadtest.ala  threadtest.allot
crates/allot_asm/programs/next-gen/: fib.ala  main.ala
crates/allot_asm/src/: lexer.rs  lib.rs  parser.rs
crates/allot_bytecode/: Cargo.toml  README.md
crates/allot_bytecode/src/: forms.rs  gen.rs  lib.rs  parse.rs
crates/allot_bytecode/tests/: bytecode.rs  tests.rs
crates/allot_codegen/: Cargo.toml  README.md
crates/allot_codegen/src/: i.rs  lib.rs  structs.rs
crates/allot_codegen/tests/: lib_return.rs  raw_enum.rs
crates/allot_lib/: Cargo.toml  README.md
crates/allot_lib/src/: instructions.rs  lib.rs  operations.rs  registers.rs  types.rs
crates/allot_runtime/: Cargo.toml  README.md
crates/allot_runtime/benches/: benchmarks.rs  instructions.rs
crates/allot_runtime/src/: lib.rs  memory.rs  operations.rs  tests.rs  tick.rs  traits.rs
crates/allot_runtime/src/bytecode/: byte_form.rs  mod.rs
crates/allot_runtime/src/memory/: heap.rs  mod.rs  register.rs  stack.rs
crates/allot_runtime/src/structures/: memory.rs  mod.rs  operations.rs  types.rs
crates/allot_runtime/tests/: runtime.rs  tests.rs
lib/_blank/: README.md
lib/_blank/src/: root.zig
lib/allot/: README.md
lib/allot/src/: root.zig
lib/asm/: README.md
lib/bytecode/: README.md
lib/bytecode/src/: root.zig  temp.zig
lib/runtime/: README.md
lib/runtime/src/: root.zig
lib/std/: README.md
src/: args.rs  lib.zig  main.rs  main.zig  root.zig
