[package]
name = "allot"
version = "0.0.1-alpha"
edition = "2021"
authors = ["harmless-tech"]
description = "A highly experminal language runtime"
readme = "README.md"
homepage = "https://harmless.tech/languages/allot"
repository = "https://github.com/harmless-tech/allot"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "allot"
path = "src/main.rs"

[dependencies]
allot_runtime = { version = "0.0.1-alpha", path = "crates/allot_runtime", features = ["bytecode"] }
clap = { version = "4.0.18", features = ["derive"] }
mimalloc = { version = "0.1.30", default-features = false }

[workspace]
members = ["crates/*"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.docs.rs]
all-features = true
