[package]
name = "allot"
version = "0.0.3-alpha"
edition = "2021"
authors = ["harmless-tech"]
description = "A highly experminal language runtime"
readme = "README.md"
homepage = "https://harmless.tech/languages/allot"
repository = "https://github.com/harmless-tech/allot"
license = "MIT"
exclude = [
    ".github/",
    ".gitignore",
    "justfile",
    "rustfmt.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "allot"
path = "src/main.rs"

[dependencies]
allot_asm = { version = "0.0.3-alpha", path = "crates/allot_asm", optional = true }
allot_bytecode = { version = "0.0.3-alpha", path = "crates/allot_bytecode", default-features = false, features = ["parse"]}
allot_runtime = { version = "0.0.3-alpha", path = "crates/allot_runtime" }
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
mimalloc = { version = "0.1.34", default-features = false, optional = true }

[features]
default = ["asm", "mimalloc"]
asm = ["allot_asm", "allot_bytecode/gen"]
mimalloc = ["dep:mimalloc"]

[workspace]
members = ["crates/*"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
#strip = true TODO: Maybe enable this once on release versions

[package.metadata.docs.rs]
all-features = true
