[package]
name = "allot_asm"
version = "0.0.3-alpha"
edition = "2021"
authors = ["harmless-tech"]
description = "Assembly for the allot_runtime"
readme = "README.md"
homepage = "https://harmless.tech/languages/allot"
repository = "https://github.com/harmless-tech/allot"
license = "MIT"
exclude = [
    "programs/"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allot_lib = { version = "0.0.3-alpha", path = "../allot_lib" }
lazy-regex = "2.3.1" # TODO: Use logos instead?
