[package]
name = "allot_bytecode"
version = "0.0.1-alpha"
edition = "2021"
authors = ["harmless-tech"]
description = "A highly experminal language runtime"
readme = "README.md"
homepage = "https://harmless.tech/languages/allot"
repository = "https://github.com/harmless-tech/allot"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allot_lib = { version = "0.0.1-alpha", path = "../allot_lib" }

[features]
default = ["gen", "parse"]
gen = []
parse = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]
