[package]
name = "allot_bytecode"
version = "0.0.2-alpha"
edition = "2021"
authors = ["harmless-tech"]
description = "A highly experminal language runtime"
readme = "README.md"
homepage = "https://harmless.tech/languages/allot"
repository = "https://github.com/harmless-tech/allot"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allot_lib = { version = "0.0.2-alpha", path = "../allot_lib" }

[dev-dependencies]
mimalloc = { version = "0.1.30", default-features = false }

[features]
default = ["forms", "gen", "parse"]
forms = []
gen = ["forms"]
parse = ["forms"]

[[test]]
name = "tests"
path = "tests/bytecode.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]
