[package]
name = "allot_codegen"
version = "0.0.3-alpha"
edition = "2021"
authors = ["harmless-tech"]
description = "Macros for allot"
readme = "README.md"
homepage = "https://harmless.tech/languages/allot"
repository = "https://github.com/harmless-tech/allot"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = "1.0.107"

[dev-dependencies]
num_enum = "0.5.9"

[lib]
proc-macro = true

[[test]]
name = "raw_enum"
path = "tests/raw_enum.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]
