[package]
name = "allot_lib"
version = "0.0.3-alpha"
edition = "2021"
authors = ["harmless-tech"]
description = "Library of core components for Allot"
readme = "README.md"
homepage = "https://harmless.tech/languages/allot"
repository = "https://github.com/harmless-tech/allot"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allot_codegen = { version = "0.0.3-alpha", path = "../allot_codegen" }
num_enum = "0.5.9"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]
