[package]
name = "allot_runtime"
version = "0.0.1-alpha"
edition = "2021"
authors = ["harmless-tech"]
description = "A language runtime"
readme = "README.md"
homepage = "https://harmless.tech/languages/allot"
repository = "https://github.com/harmless-tech/allot"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.1", features = ["macros"] }

[dev-dependencies]
criterion = "0.4.0"
mimalloc = { version = "0.1.30", default-features = false }

[features]
default = []
bytecode = []
bytecode_gen = ["bytecode"]

[[test]]
name = "tests"
path = "tests/tests.rs"

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
