[package]
name = "allot_runtime"
version = "0.0.2-alpha"
edition = "2021"
authors = ["harmless-tech"]
description = "A highly experminal language runtime"
readme = "README.md"
homepage = "https://harmless.tech/languages/allot"
repository = "https://github.com/harmless-tech/allot"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allot_lib = { version = "0.0.2-alpha", path = "../allot_lib" }
phf = { version = "0.11.1", features = ["macros"] }

[dev-dependencies]
criterion = "0.4.0"

[[test]]
name = "tests"
path = "tests/runtime.rs"

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]
